--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="favorecido">Favorecido</string>
     <string name="categoria">Categoria</string>
     <string name="lancamento">Lançamento</string>
+    <string name="inicio">Início</string>
+
 </resources>
