--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,12 @@
     <string name="categoria">Categoria</string>
     <string name="lancamento">Lançamento</string>
     <string name="inicio">Início</string>
-
+    <string name="confirmar">Confirmar</string>
+    <string name="cancelar">Cancelar</string>
+    <string name="nome">Nome</string>
+    <string name="ativo">Ativo</string>
+    <string name="operacaoNaoInformada">Operação não informada.</string>
+    <string name="alterar">Alterar</string>
+    <string name="excluir">Excluir</string>
+    <string name="inserir">Inserir</string>
 </resources>
